created invoice class with constructor

--- a/invoice.html
+++ b/invoice.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+    console.log("test test test");
+
+    class Invoice {
+        constructor () {
+            this.items = [];
+            this.estimate = 0;
+            this.estimateWithTax = 0;
+            this.customerInfo = {
+                name: "",
+                address: "",
+                city: "",
+                province: ""
+            }
+        }
+        
+
+    }
+
+    const testInvoice = new Invoice();
+    </script>
 </body>
 </html>
