moved js to separate files

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             if ((userItem.trim().length > 0) && (userPrice.trim().length > 0)) {
                 const todo = `
                 <li>
-                    <span class="check todo"></span>${userItem} $${userPrice}
+                    <span class="check todo"></span>${userItem} $${userPrice} count:
                     <span class="fas fa-plus-square"></span>
                     <span class="fas fa-minus-square"></span>
                     <span class="fas fa-trash"></span>
